DE70-spacing-between-dropdown-buttons-fixed

--- a/crds-angular/sass/main.css
+++ b/crds-angular/sass/main.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:300");
 @import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
@@ -6856,8 +6856,7 @@ header.show .container {
     content: "";
     opacity: 0; }
   .navbar--login .btn {
-    margin-top: 10px;
-    margin-bottom: 15px; }
+      margin: 2px; }
   .navbar--login .dropdown-menu {
     left: calc(100% - 300px);
     width: 300px; }
